--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "encoder"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
+author = "reloginn"
 
 [dependencies]
-"webp" = "0.2.2"
-"image" = "0.24.0"
-"walkdir" = "2.3.3"
+webp = "0.2.2"
+image = "0.24.0"
+walkdir = "2.3.3"
+rand = "0.8.5"
