--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "image-compressor"
-version = "0.0.1"
+version = "0.0.3"
 edition = "2021"
 authors = ["reloginn <hexeo.dev@gmail.com>"]
 
 [dependencies]
 webp = "0.2.2"
 image = "0.24.0"
+pico-args = "0.5.0"
 
 [profile.release]
 strip = true
