--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cothese"
-version = "0.0.3"
+version = "0.0.4"
 edition = "2021"
 authors = ["reloginn <hexeo.dev@gmail.com>"]
 
@@ -8,6 +8,7 @@ authors = ["reloginn <hexeo.dev@gmail.com>"]
 webp = "0.2.2"
 image = "0.24.0"
 pico-args = "0.5.0"
+log = "0.4.19"
 
 [profile.release]
 strip = true
